Added laravel scount for fuzzy text search
